--- a/lib/templates/directory.html
+++ b/lib/templates/directory.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>{{title}}</title>
 	<meta charset="utf-8">
+	<link rel="icon" href="{markserv}icons/markserv.png">
 	<link rel="stylesheet" href="{markserv}templates/markserv.css">
 	<link rel="stylesheet" href="{markserv}templates/highlight-js-github-gist.css">
 	<link rel="stylesheet" href="{markserv}icons/icons.css">
@@ -14,7 +15,7 @@
 <article class="markdown-body">
 <h1 class="icon folder isfolder">{{#each breadcrumbs}}<a href="{{href}}">{{text}}</a>{{/each}}</h1>
 {{{content}}}
-<footer><sup><hr> Served by <a href="https://www.npmjs.com/package/markserv">MarkServ</a> | PID: {{pid}}</sup></footer>
+<footer><sup><hr>PID: {{pid}}</sup></footer>
 </article>
 </body>
 </html>
