--- a/lib/templates/markdown.html
+++ b/lib/templates/markdown.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>{{title}}</title>
 	<meta charset="utf-8">
+	<link rel="icon" href="{markserv}icons/markserv.png">
 	<link rel="stylesheet" href="{markserv}templates/markserv.css">
 	<link rel="stylesheet" href="{markserv}templates/highlight-js-github-gist.css">
 	<script type="text/javascript" id="MathJax-script" async
@@ -15,7 +16,7 @@
 <body>
 <article class="markdown-body">
 {{{content}}}
-<footer><sup><hr> Served by <a href="https://www.npmjs.com/package/markserv">MarkServ</a> | PID: {{pid}}</sup></footer>
+<footer><sup><hr>PID: {{pid}}</sup></footer>
 </article>
 </body>
 </html>
